# spotify-cli

./: Cargo.toml  README.md  how_to_release.md
.github/workflows/: unique-test.yml
snap/: snapcraft.yaml
snap/gui/: spt.desktop
src/: banner.rs  config.rs  main.rs  redirect_uri.html  user_config.rs
src/ui/: mod.rs  util.rs
